Dave Ruined Everything: Added: cool gif, badass description update, css file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Forcebuds</title>
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/forcebuds.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +25,8 @@
 				<h1>Welcome Forcebuds!</h1>
 				<p>Forcebuds is a place for Salesforce people to get together and share resources.</p>
 				<h2>About Us</h2>
-				<p>Most of us are from the #salesforce <a href="http://wearedarylshaber.com/irc/">IRC channel</a> come on by and say hi!</p>
+				<img align="left" style="padding-right: 10px;" src="images/iKnowEverything.gif" width="360" height="270"/><br/>
+				<p>We are a group of extremely talented and very humble nerds and geeks who share a common interest in <a href="http://www.salesforce.com">Salesforce</a>. Most of us are from the #salesforce <a href="http://wearedarylshaber.com/irc/">IRC channel</a> come on by to ask a question. Or, just to say hi!</p>
 			</div>
 		</div>
 		<div class="container">
