--- a/index.html
+++ b/index.html
@@ -16,6 +16,39 @@
 		<![endif]-->
 
 		<style>
+			html {
+				position: relative;
+				min-height: 100%;
+			}
+
+			body {
+				margin-bottom: 60px;
+			}
+
+			.footer {
+				position: absolute;
+				bottom: 0;
+				width: 100%;
+				height: 60px;
+				background-color: #f5f5f5;
+			}
+
+			body > .container {
+				padding: 60px 15px 0;
+			}
+
+			.container .text-muted {
+				margin: 20px 0;
+			}
+
+			.footer > .container {
+				padding-right: 15px;
+				padding-left: 15px;
+			}
+
+			.footer > .container > p {
+				text-align: right;
+			}
 		</style>
 	</head>
 	<body>
@@ -36,6 +69,11 @@
 				</div>
 			</div>
 		</div>
+		<footer class="footer">
+			<div class="container">
+				<p class="text-muted"><a class="text-muted" href="http://www.warnerbros.com/archive/spacejam/movie/jam.htm">Missing the old forcebuds site?</a></p>
+			</div>
+		</footer>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
